css/lee.io.css
html,
body {
    height: 100%;
    margin: 0;
    padding: 0;
    background: #2E2E2E;
}

.flex {
    display: flex;
    justify-content: center;
    height: 100%;
}

.box {
    color: #ECECEC;
    font-family: "Lucida Console", Monaco, monospace;
    font-size: 16px;
    height: 500px;
    width: 60%;
    margin-top: 5%;
}

.title-bar {
    display: flex;
    align-items: center;
    background: #3C3C3C;
    height: 25px;
    padding-left: 5px;
    color: #666666;
}

#terminal {
    background: #1E1E1E;
    height: 100%;
    word-break: break-all;
    white-space: pre-wrap;
    padding: 10px;
    font-family: "Courier New";
    line-height: 18px;
    vertical-align: middle;
    overflow: scroll;
    outline: none;
}

#terminal:focus .cursor {
    background-color: #FFFFFF;
    color: #1E1E1E;
    display: inline-block;
    box-shadow: none;
}

#terminal .cursor {
    box-shadow: inset 0px 0px 0px 1px #FFFFFF;
}

